FreeST/test/Programs/ValidTests/Modules/DiamondL/DiamondL.fst
module DiamondL where 

import A 
import B 

main : Int 
main = a + b 
