FreeST/test/Programs/InvalidTests/Modules/Self/Self.fst
module Self where

import Self

main : Int
main = 100
